fixed tutorial layout issues... mostly

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -17,10 +17,10 @@
 /*******************************/
 body {
 	margin: 0;
-	padding: 0 0 30px 0;
+	padding: 0;
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 	background-image: url("../img/castle-bg-md.jpg");
-	background-size: 100% 150%;
+	background-size: 100% 250%;
 }
 
 a {
@@ -29,7 +29,7 @@ a {
 
 h1 {
 	display: inline-block;
-	vertical-align: center;
+	vertical-align: middle;
 	font-family: Perrygot;
 	text-align: center;
 }
@@ -37,7 +37,6 @@ h1 {
 h2 {
 	font-size: 1.5em;
 	display: inline-block;
-	float: left;
 	margin: 1.0em auto;
 	padding: 0;
 }
@@ -51,12 +50,11 @@ button {
 	margin: 0 auto 20px auto;
 	font-size: 1.25em;
 	background-image: url("../img/brushed_alu_dark.png");
-	border: outset 4px solid #aaa;
+	border: outset 4px solid;
 }
 
 #divSplash {
 	margin: auto;
-	width: 80%;
 	display: block;
 }
 
@@ -96,7 +94,7 @@ button {
 #next, #justPlay {
 	font-size: 1.75em;
 	display: inline-block;
-	margin: 0;``
+	margin: 0;
 	padding: 0.25em;
 }
 
@@ -105,17 +103,10 @@ button {
 }
 
 #tutorialGrid {
-	position: absolute;
 	width: 92%;
-	margin-top: -2%;
 	padding: 0;
 	min-width: 260px;
 	min-height: 260px;
-
-}
-
-#tutorialGrid tbody {
-	margin: 0 auto;
 }
 
 
@@ -133,9 +124,6 @@ button {
 }
 
 #btnTutorial {
-	position: absolute;
-	clear: left;
-	display: inline-block;
 	padding: 0.5em;
 	font-size: 2.0em;
 	font-weight: bolder;
@@ -147,15 +135,18 @@ button {
 /* BOARD STYLES */
 /*******************************/
 #container {
+	box-sizing: border-box;
 	background: url("../img/mahogany.jpg") no-repeat;
 	background-size: cover;
-	padding: 30px 0;
+	padding: 0;
 	margin: auto;
 	width: 60%;
-	padding-bottom: 48.5%;
+	display: block;
+	padding-bottom: 49%;
 	border: 10px outset transparent;
 	box-shadow: 0 2px 14px 1px black;
 	-webkit-border-image: url("../img/wood-border-test.jpg") 10 300 stretch;
+	-moz-border-image:    url("../img/wood-border-test.jpg") 10 300 stretch;
 	-o-border-image:      url("../img/wood-border-test.jpg") 10 300 stretch;
 	border-image:         url("../img/wood-border-test.jpg") 10 300 stretch;
 }
@@ -164,7 +155,7 @@ button {
 	margin: 0 0 0 3%;
 	padding: 0;
 	width: 30%;
-	max-width: 300px;
+	max-width: 360px;
 	display: inline-block;
 }
 
@@ -177,9 +168,7 @@ button {
 }
 
 #divGrid {
-	position: absolute;
 	width: 92%;
-	margin-top: -2%;
 	padding: 0;
 	min-width: 260px;
 	min-height: 260px;
@@ -193,10 +182,13 @@ button {
 	margin-left: 1%;
 	margin-top: 1%;
 	float: left;
-	opacity: 0.85;
 	border-radius: 5%;
 	box-shadow: inset 0 -1px 2px 0 #404040;
-	border: outset 2px #654;
+	border: outset 3px #654;
+	-webkit-border-image: url("../img/wood-border-test.jpg") 10 300 stretch;
+	-moz-border-image:    url("../img/wood-border-test.jpg") 10 300 stretch;
+	-o-border-image:      url("../img/wood-border-test.jpg") 10 300 stretch;
+	border-image:         url("../img/wood-border-test.jpg") 10 300 stretch;
 }
 
 .square img {
@@ -240,7 +232,8 @@ button {
 
 .clicked {
 	background: transparent;
-	box-shadow: inset -3px 0 20px 1px #f0f0f0;
+	box-shadow: inset -3px 0 20px 0 #f0f0f0;
+	border: none;
 }
 
 #divUserMoves {
@@ -300,7 +293,7 @@ button {
 /*******************************/
 /* MEDIA QUERIES */
 /*******************************/
-@media screen and (min-width: 840px), screen and (max-width: 1250px) {
+@media screen and (min-width: 840px), screen and (max-width: 1000px) {
 	#container {
 		width: 750px;
 	}
@@ -317,19 +310,12 @@ button {
 
 	#container {
 		width: 90%;
+		padding-bottom: 50%;
 	}
 
 	#sidebar {
 		float: left;
-		position: absolute;
-		left: 4%;
-	}
-
-	#main {
-		clear: left;
-		position: absolute;
-		left: 45%;
-		width: 50%;
+		margin: 5% 0 0 2%;
 	}
 }
 
@@ -377,10 +363,6 @@ button {
 		position: static;
 		margin: auto;
 	}
-
-/*	#tutorialGrid tbody {
-		margin: 0 auto;
-	}*/
 
 	.banner {
 		width: 80%;
